tests/baselines/reference/cloduleWithPriorInstantiatedModule.errors.txt
cloduleWithPriorInstantiatedModule.ts(2,11): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.


==== cloduleWithPriorInstantiatedModule.ts (1 errors) ====
    // Non-ambient & instantiated module.
    namespace Moclodule {
              ~~~~~~~~~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
        export interface Someinterface {
            foo(): void;
        }
        var x = 10;
    }
    
    class Moclodule {
    }
    
    // Instantiated module.
    namespace Moclodule {
        export class Manager {
        }
    }